--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,14 @@
 
   font-family: "Poppins", sans-serif;
 }
+
+.home-about {
+  background-image: url("/homesection.png");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
